fixed layout issue with donate page

--- a/src/css/DonatePage.css
+++ b/src/css/DonatePage.css
@@ -108,9 +108,9 @@ For Chrome,Safari,Edge,Opera
 
 
 /* Frequency options & Ending */
-.form-row {
+.form-row-donate {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 1rem;
   margin-bottom: 1.5rem;
 }
@@ -134,7 +134,6 @@ select.form-control {
   outline: none;
   box-shadow: none;
   background-color: #2c2c2c;
-  /* color: white; */
 }
 
 select.form-control:focus {
@@ -149,6 +148,8 @@ input.form-control:focus {
   border: 1px solid #007bff;
 }
 
+
+/* Donate Submit Button Styles*/
 .donate-button-wrapper {
   display: flex;
   justify-content: center;
@@ -213,50 +214,6 @@ input.form-control:focus {
     left: 90%;
   }
 }
-/* .login-button-donate {
-  padding: 1rem 2.5rem;
-  border-radius: 12px;
-  font-weight: 600;
-  font-size: 1rem;
-  border: none;
-  cursor: pointer;
-  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  overflow: hidden;
-  letter-spacing: 0.025em;
-  -webkit-user-select: none;
-  user-select: none;
-  background: linear-gradient(90deg, #286FB4 0%, #125497 50%, #80a1dc 75%);
-  color: #FFFFFF;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  gap: 0.5rem;
-  margin-top: 1rem;
-  transition: background 0.4s ease, transform 0.3s ease;
-}
-
-.login-button-donate:hover {
-  background: linear-gradient(90deg, #ce3d55 0%, #3360b3 100%);
-  transform: translateY(-2px);
-}
-
-.login-button-donate::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -100% -692.5px;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(120deg, transparent, rgba(255, 255, 255, 0.4), transparent);
-  transform: skewX(-20deg);
-  z-index: 1;
-}
-
-.login-button-donate:hover::before {
-  animation: shimmer 1s ease-in-out;
-} */
 
 /* Explanation/paragraphs of why to donate styling*/
 
